2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	There is no reason why the OTP communication should be interrupted
	in cases where a scan can not be executed (due to whatever reason).
	It is far better continue OTP communication for two reasons: One the
	one hand this way the status of a task can be set to "Error" instead
	of "Stopped".

	* src/attack.c (attack_network): In case no target hosts were
	provided issue an error message and return with OK which prevents
	bailing out of otp.
	In case the interface was not authorized an  error message and
	return with OK which prevents bailing out of otp.

2014-02-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/plugs_req.c (get_closed_udp_ports): Call kb_get_port_state_proto()
	only for valid port numbers.

2014-02-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c: Include base/openvas_networking.h. Remove getpts
	extern declaration.
	(attack_network): Validate port_range with validate_port_range() and
	send an error message to client upon failure.

2014-01-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_launch): Removed computation of
	timeout. It is a dead assignment anyway. The timeout computation
	actually happens in pluginlaunch.c(plugin_launch) in the same
	way.

2014-01-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/utils.c (list2args): Removed dead initial assignment of t.
	That variable is anyway initialized in the while-loop.

2014-01-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Add section about CLang and added some notes on
	SIGHUP and pid file.

2014-01-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (enable_plugin_and_dependencies): Return
	directly when plugin was already enabled.

2014-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add "--omit-dir-times" to rsync options to